--- a/Vocable/Features/Settings/Views/SettingsToggleCollectionViewCell.xib
+++ b/Vocable/Features/Settings/Views/SettingsToggleCollectionViewCell.xib
@@ -26,7 +26,7 @@
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                         </variation>
                     </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rux-wr-INz">
+                    <switch contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rux-wr-INz">
                         <rect key="frame" x="458" y="34" width="51" height="31"/>
                     </switch>
                 </subviews>
