--- a/Vocable/Common/Views/ToastView.xib
+++ b/Vocable/Common/Views/ToastView.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yiJ-Tr-Jim" userLabel="savePhraseView" customClass="PhraseSavedView" customModule="Vocable" customModuleProvider="target">
+        <view opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yiJ-Tr-Jim" userLabel="ToastView" customClass="ToastView" customModule="Vocable" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="387" height="108"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -24,7 +24,7 @@
                 </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-            <accessibility key="accessibilityConfiguration" identifier="WarningView"/>
+            <accessibility key="accessibilityConfiguration" identifier="ToastView"/>
             <constraints>
                 <constraint firstAttribute="trailingMargin" secondItem="fEx-Zh-S4e" secondAttribute="trailing" id="GWB-Ur-efQ"/>
                 <constraint firstItem="fEx-Zh-S4e" firstAttribute="top" secondItem="yiJ-Tr-Jim" secondAttribute="topMargin" id="U0j-0K-NGR"/>
@@ -44,7 +44,7 @@
                 <edgeInsets key="layoutMargins" top="16" left="32" bottom="16" right="32"/>
             </variation>
             <connections>
-                <outlet property="alertLabel" destination="fEx-Zh-S4e" id="JWw-AS-4Jo"/>
+                <outlet property="titleLabel" destination="fEx-Zh-S4e" id="JWw-AS-4Jo"/>
             </connections>
             <point key="canvasLocation" x="313.768115942029" y="110.49107142857143"/>
         </view>
