--- a/Vocable/Features/Settings/TimingSensitivity/Views/DwellTimeCollectionViewCell.xib
+++ b/Vocable/Features/Settings/TimingSensitivity/Views/DwellTimeCollectionViewCell.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="ipad12_9" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -11,43 +11,45 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="omo-gs-g3x" customClass="DwellTimeCollectionViewCell" customModule="Vocable" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="575" height="201"/>
+            <rect key="frame" x="0.0" y="0.0" width="609" height="152"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="YVu-RA-dFE">
-                <rect key="frame" x="0.0" y="0.0" width="575" height="201"/>
+                <rect key="frame" x="0.0" y="0.0" width="609" height="152"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hover Time" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000001192092896" translatesAutoresizingMaskIntoConstraints="NO" id="OLA-YL-VeV">
-                        <rect key="frame" x="20" y="56" width="149" height="33.5"/>
+                        <rect key="frame" x="20" y="20" width="149" height="33.5"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                         <color key="textColor" name="DefaultFontColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2s" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000001192092896" translatesAutoresizingMaskIntoConstraints="NO" id="9Ym-ys-KLL">
-                        <rect key="frame" x="271.5" y="92" width="32.5" height="33.5"/>
+                        <rect key="frame" x="288.5" y="75.5" width="32.5" height="33.5"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                         <color key="textColor" name="DefaultFontColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aGT-tV-MsX">
-                        <rect key="frame" x="20" y="44" width="535" height="2"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aGT-tV-MsX" userLabel="TopBar">
+                        <rect key="frame" x="20" y="8" width="569" height="2"/>
                         <color key="backgroundColor" name="DefaultCellBackground"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="4aU-Nv-iyF"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wpa-XA-zUK">
-                        <rect key="frame" x="20" y="165" width="535" height="2"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wpa-XA-zUK" userLabel="BottomBar">
+                        <rect key="frame" x="20" y="142" width="569" height="2"/>
                         <color key="backgroundColor" name="DefaultCellBackground"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="mMs-08-NWm"/>
                         </constraints>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NYz-0h-pvW" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                        <rect key="frame" x="20" y="89.5" width="85" height="55"/>
+                        <rect key="frame" x="20" y="61.5" width="85" height="60.5"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="55" id="CsP-se-IVb"/>
-                            <constraint firstAttribute="width" constant="85" id="Ra7-fV-vCz"/>
+                            <constraint firstAttribute="width" constant="85" id="Ra7-fV-vCz">
+                                <variation key="heightClass=compact" constant="55"/>
+                                <variation key="widthClass=compact" constant="55"/>
+                            </constraint>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="tintColor" name="DefaultFontColor"/>
@@ -56,10 +58,12 @@
                         </userDefinedRuntimeAttributes>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q0m-iz-XHs" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                        <rect key="frame" x="470" y="89.5" width="85" height="55"/>
+                        <rect key="frame" x="504" y="61.5" width="85" height="60.5"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="55" id="01n-bZ-usE"/>
-                            <constraint firstAttribute="width" constant="85" id="hwY-fa-zSH"/>
+                            <constraint firstAttribute="width" constant="85" id="hwY-fa-zSH">
+                                <variation key="heightClass=compact" constant="55"/>
+                                <variation key="widthClass=compact" constant="55"/>
+                            </constraint>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="tintColor" name="DefaultFontColor"/>
@@ -70,23 +74,30 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="Wpa-XA-zUK" secondAttribute="trailing" id="4Rs-8j-bhn"/>
-                    <constraint firstItem="NYz-0h-pvW" firstAttribute="top" secondItem="OLA-YL-VeV" secondAttribute="bottom" id="6AI-m1-oLR"/>
+                    <constraint firstItem="NYz-0h-pvW" firstAttribute="top" secondItem="OLA-YL-VeV" secondAttribute="bottom" constant="8" id="6AI-m1-oLR"/>
                     <constraint firstItem="aGT-tV-MsX" firstAttribute="top" secondItem="YVu-RA-dFE" secondAttribute="topMargin" id="B0d-Es-ld4"/>
                     <constraint firstAttribute="trailingMargin" secondItem="aGT-tV-MsX" secondAttribute="trailing" id="H63-TK-UVi"/>
+                    <constraint firstItem="9Ym-ys-KLL" firstAttribute="centerY" secondItem="YVu-RA-dFE" secondAttribute="centerY" constant="16" id="Rsa-Qu-rVf"/>
                     <constraint firstItem="NYz-0h-pvW" firstAttribute="leading" secondItem="YVu-RA-dFE" secondAttribute="leadingMargin" id="TMr-A8-5HI"/>
-                    <constraint firstItem="q0m-iz-XHs" firstAttribute="top" secondItem="OLA-YL-VeV" secondAttribute="bottom" id="UOf-Nv-VRd"/>
+                    <constraint firstItem="q0m-iz-XHs" firstAttribute="top" secondItem="OLA-YL-VeV" secondAttribute="bottom" constant="8" id="UOf-Nv-VRd"/>
                     <constraint firstAttribute="trailingMargin" secondItem="q0m-iz-XHs" secondAttribute="trailing" id="Xsn-qD-nAw"/>
                     <constraint firstItem="OLA-YL-VeV" firstAttribute="leading" secondItem="YVu-RA-dFE" secondAttribute="leadingMargin" id="ZIM-to-PXH"/>
                     <constraint firstAttribute="bottomMargin" secondItem="Wpa-XA-zUK" secondAttribute="bottom" id="d6K-nM-mjX"/>
                     <constraint firstItem="9Ym-ys-KLL" firstAttribute="centerX" secondItem="YVu-RA-dFE" secondAttribute="centerX" id="eed-of-gEu"/>
                     <constraint firstItem="aGT-tV-MsX" firstAttribute="leading" secondItem="YVu-RA-dFE" secondAttribute="leadingMargin" id="exm-xA-nGB"/>
                     <constraint firstItem="Wpa-XA-zUK" firstAttribute="leading" secondItem="YVu-RA-dFE" secondAttribute="leadingMargin" id="ic9-vj-GYy"/>
+                    <constraint firstItem="Wpa-XA-zUK" firstAttribute="top" secondItem="q0m-iz-XHs" secondAttribute="bottom" constant="20" id="pVP-lq-SlZ"/>
+                    <constraint firstItem="Wpa-XA-zUK" firstAttribute="top" secondItem="NYz-0h-pvW" secondAttribute="bottom" constant="20" id="s4k-5Q-Zco"/>
                     <constraint firstItem="OLA-YL-VeV" firstAttribute="top" secondItem="YVu-RA-dFE" secondAttribute="topMargin" constant="12" id="s6L-ll-p3Q"/>
-                    <constraint firstItem="9Ym-ys-KLL" firstAttribute="top" secondItem="OLA-YL-VeV" secondAttribute="bottom" constant="2.5" id="x6M-lX-fu4"/>
                 </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="575" height="201"/>
-            <point key="canvasLocation" x="428.26086956521743" y="130.24553571428572"/>
+            <size key="customSize" width="609" height="152"/>
+            <connections>
+                <outlet property="decreaseTimeButton" destination="NYz-0h-pvW" id="b1m-ks-jcb"/>
+                <outlet property="increaseTimeButton" destination="q0m-iz-XHs" id="5eG-Hh-eRr"/>
+                <outlet property="timeLabel" destination="9Ym-ys-KLL" id="2cU-ix-BQl"/>
+            </connections>
+            <point key="canvasLocation" x="437.98828125" y="119.47291361639823"/>
         </collectionViewCell>
     </objects>
     <resources>
